--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dom-parser": "^0.1.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-query-parser": "^1.3.3",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "node-svg2img": "^1.1.0",
