--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -21,7 +22,7 @@
     "free",
     "gratuit"
   ],
-  "author": "Sylicium",
+  "author": "Sylicium, matthieuEv",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.4.0",
