--- a/.github/workflows/url.yml
+++ b/.github/workflows/url.yml
@@ -13,10 +13,15 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.x
-      - name: Installer les dépendances
+      - name: Installer les dépendances pour python
         run: |
           python -m pip install --upgrade pip
           pip install selenium
+      - name: Installer le pilote de navigateur Firefox
+        run: |
+            sudo apt-get update
+            sudo apt-get install -y firefox-geckodriver
+                
       - name: Exécuter le script Python
         run: python bot/telegramBot/getUrl.py
       - name: Déployer sur GitHub Pages
