--- a/.github/workflows/url.yml
+++ b/.github/workflows/url.yml
@@ -3,31 +3,33 @@ on:
     workflow_dispatch:
 
 jobs:
-  Get-Url:
-    name: Get URL
-    runs-on: ubuntu-latest
-    steps:
-      - name: Vérifier le code source
-        uses: actions/checkout@v2
-      - name: Configurer Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.x
-      - name: Installer les dépendances pour python
-        run: |
-          python -m pip install --upgrade pip
-          pip install selenium
-      - name: Installer le pilote de navigateur Firefox
-        run: |
-            sudo apt-get update
-            sudo apt-get install -y firefox-geckodriver
-                
-      - name: Exécuter le script Python
-        run: python bot/telegramBot/getUrl.py
-      - name: Déployer sur GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./
-          publish_branch: gh-pages
-          force_orphan: true
+    Get-Url:
+        name: Get URL
+        runs-on: ubuntu-latest
+        steps:
+        - name: Vérifier le code source
+        uses: actions/checkout@v3.5.3
+        - name: Installer les dépendances pour python
+            run: |
+                python -m pip install --upgrade pip
+                pip install selenium
+        - name: Installer les dépendances pour python
+            run: |
+                python -m pip install --upgrade pip
+                pip install selenium
+        - name: Installer le pilote de navigateur Firefox
+            run: |
+                wget https://github.com/mozilla/geckodriver/releases/download/v0.24.0/geckodriver-v0.24.0-linux64.tar.gz
+                tar -xvzf geckodriver*
+                chmod +x geckodriver
+                sudo mv geckodriver /usr/local/bin/
+                    
+        - name: Exécuter le script Python
+            run: python bot/telegramBot/getUrl.py
+        - name: Déployer sur GitHub Pages
+            uses: peaceiris/actions-gh-pages@v3
+            with:
+            github_token: ${{ secrets.GITHUB_TOKEN }}
+            publish_dir: ./
+            publish_branch: gh-pages
+            force_orphan: true
