--- a/.github/workflows/url.yml
+++ b/.github/workflows/url.yml
@@ -20,6 +20,10 @@ jobs:
           chmod +x geckodriver
           sudo mv geckodriver /usr/local/bin/
           export PATH=$PATH:$PWD
+          echo =============================
+          echo $PATH
+          echo =============================
+          geckodriver --version
       - name: Exécuter le script Python
         run: python bot/telegramBot/getUrl.py
       - name: Déployer sur GitHub Pages
