somef 2.1.6, ztParser 1.6.0 and fixes
- someFunctions updated to 2.1.6
- ztParser updated to 1.6.0
  - Added cooldown to prevent error 520 or rate limits from axios requests when performing requests too fast
  - Added devmode to toggle console.log events
  - Fix on image, quality and language keys from search parser
  - Fix useBaseURL() function not working properly
- rename testing-ztParser.js to dev-ztParser.js
- dev-ztParser: fix useBaseURL()
- Added contributors key in package.json and added one member

--- a/package.json
+++ b/package.json
@@ -27,7 +27,17 @@
     "free",
     "gratuit"
   ],
-  "author": "Sylicium",
+  "author": {
+    "name" : "Sylicium",
+    "email" : "contact@sylicium.fr",
+    "url" : "https://github.com/Sylicium/"
+  },
+  "contributors": [
+    {
+      "name": "Matthieu Evain",
+      "url": "https://www.evain.ovh/"
+    }
+  ],
   "license": "MIT",
   "dependencies": {
     "axios": "^1.4.0",
