--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "http": "^0.0.1-security",
     "node-svg2img": "^1.1.0",
     "ppfun-captcha": "^1.6.7",
-    "socket.io": "^4.7.1"
+    "request": "^2.88.2",
+    "socket.io": "^4.7.1",
+    "tough-cookie": "^4.1.3"
   },
   "bugs": {
     "url": "https://github.com/Sylicium/zone-telechargement-api/issues"
