--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.4.0",
+    "cheerio": "^1.0.0-rc.12",
     "cli-color": "^2.0.3",
     "discord.js": "^14.11.0",
     "dom-parser": "^0.1.6",
