--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-.env
-node_modules/*
-logs/*
+# Logs
+logs
 *.log
-package-lock.json
+
+# Environment variables
+.env
