--- a/.github/workflows/ZtUrl.yml
+++ b/.github/workflows/ZtUrl.yml
@@ -6,10 +6,8 @@ jobs:
   get_html:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
       - name: Get HTML
         run: |
           HTML_CONTENT=$(curl -s https://t.me/ZT_officiel)
           echo "$HTML_CONTENT" > page.html
+        shell: bash
