--- a/.github/workflows/ZtUrl.yml
+++ b/.github/workflows/ZtUrl.yml
@@ -1,6 +1,8 @@
 name: Get HTML from Web Page
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
   get_html:
@@ -8,6 +10,7 @@ jobs:
     steps:
       - name: Get HTML
         run: |
-          HTML_CONTENT=$(curl -v -s https://t.me/ZT_officiel)
-          echo "HTML_CONTENT: $HTML_CONTENT"
+          HTML_CONTENT=$(curl -s https://t.me/ZT_officiel)
+          TITLE=$(echo "$HTML_CONTENT" | grep -oP '<div class="tgme_page_title"[^>]*><span dir="auto">([^<]+)</span></div>' | sed -n 's/.*<span dir="auto">\([^<]*\)<\/span><\/div>/\1/p')
+          echo "Title: $TITLE"
         shell: bash
