--- a/.github/workflows/ZtUrl.yml
+++ b/.github/workflows/ZtUrl.yml
@@ -11,6 +11,9 @@ jobs:
       - name: Get HTML
         run: |
           HTML_CONTENT=$(curl -v -s https://t.me/ZT_officiel)
+          echo "HTML: $HTML_CONTENT"
+      - name: Get Title
+        run: |
           TITLE=$(echo "$HTML_CONTENT" | grep -oP '<div class="tgme_page_title"[^>]*><span dir="auto">([^<]+)</span></div>' | sed -n 's/.*<span dir="auto">\([^<]*\)<\/span><\/div>/\1/p')
           echo "Title: $TITLE"
         shell: bash
