--- a/.github/workflows/ZtUrl.yml
+++ b/.github/workflows/ZtUrl.yml
@@ -22,9 +22,9 @@ jobs:
 
       - name: Run Python script
         run: |
-          OUTPUT=$(python -c 'import requests; from bs4 import BeautifulSoup; print(BeautifulSoup(requests.get("https://t.me/ZT_officiel").text, "html.parser").find("div", class_="tgme_page_title").text)')
-          echo "Output: $OUTPUT"
-        
+          OUTPUT=$(python -c 'import requests; from bs4 import BeautifulSoup; print("https://www."+BeautifulSoup(requests.get("https://t.me/ZT_officiel").text, "html.parser").find("div", class_="tgme_page_title").text.lower())')
+          echo "Output: $OUTPUT" 
+          echo $OUTPUT > url.txt        
 
       - name: Create JSON file
         run: |
